--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ img {
 }
 
 .header-border {
-  border-color:black;
+  border-color: black;
   border-style: ridge;
   border-radius: 20px;
   opacity: .5;
@@ -54,11 +54,16 @@ img {
   box-shadow: 5px 10px 20px silver;
 }
 
-.dropdown:hover>.dropdown-menu {
-  /* display: block; */
+.delivery-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-radius: 25px;
+  padding: 15px;
+  font-size: medium;
+
 }
 
-.dropdown>.dropdown-toggle:active {
-  /*Without this, clicking will make it sticky*/
-    /* pointer-events: none; */
+.delivery-item:hover{
+  opacity: 0.7;
 }
